# Time-series-Forecasting

./: Makefile  README.md  pyproject.toml
examples/: config_lstm.json  config_regression.json
forecasting_library/: main.py
forecasting_library/data/: dataset.py  lstm.py  regression.py
forecasting_library/models/: lstm.py  regression.py
forecasting_library/tasks/: task.py
forecasting_library/utils/: early_stopping.py  logger.py  utils.py
